docs/css/app.css
html {
	line-height: 1.15;
	-ms-text-size-adjust: 100%;
	-webkit-text-size-adjust: 100%
}

body {
	margin: 0
}

html, body {
	padding: 0;
	margin: 0;
	height: 100%;
	font-size: 14px;
	font-family: 'Helvetica Neue', Arial, sans-serif;
	line-height: 1.4;
	min-width: 320px
}

* {
	box-sizing: border-box
}

p {
	margin: 0;
	padding: 0
}

a {
	text-decoration: underline;
	color: #7f7b66;
	background-color: transparent;
	-webkit-text-decoration-skip: objects;
}

a:visited {
	color: #7f7b66
}

img {
	border-style: none
}

ul, li {
	list-style: none;
	margin: 0;
	padding: 0
}

.profile-link {
	display: flex;
	flex-direction: row;
}

.profile-link img {
	margin-right: 5px;
}

.skills {
	margin-top: 8px;
}

.separator {
	margin: 0 5px
}

.summary {
	display: flex;
	flex-direction: column;
	height: 95%;
	position: fixed;
	left: calc(50% - 425px);
	padding: 0px 14px;
	top: 55px;
    width: 260px;
}

.summary .profile_photo {
	text-align: center
}

.summary .profile_photo > img {
	border-radius: 3px;
	width: 80%
}

.summary .desc {
	margin-top: 8px
}

.summary .desc .name {
	font-size: 20px;
	font-weight: 600;
	margin-bottom: 14px;
	text-align: center
}

.summary .desc .meta {
	font-weight: 500
}

.summary .desc .contact {
	margin-top: 8px
}

.summary .desc .contact span {
	color: #555;
	display: inline-block;
	width: 66px;
	font-weight: 600
}

.summary .navigation {
	margin-top: 24px
}

.summary .navigation .active > span {
	font-weight: bold
}

.summary .navigation > li {
	display: inline-block
}

.summary .navigation > li:before {
	content: '|';
	margin: 0 3px
}

.employment {
	margin-bottom: 7px
}

.employment .desc .item-2 {
	padding-left: 12px
}

.employment .desc b {
	font-weight: 500
}

.employment .desc > li {
	display: flex;
	text-align: justify
}

.employment .desc > li:before {
	content: '•';
	margin-right: 3px
}

.employment .meta .separator {
	margin: 0 5px
}

.employment .meta > span {
	margin-right: 0px
}

.timeline a {
	color: black
}

.timeline a:visited {
	color: black
}

.timeline .timeline-section {
	margin-bottom: 29px
}

.timeline .section-title {
	font-size: 17px;
	font-weight: bold;
	margin-bottom: 8px
}

.timeline .url {
	font-size: 12px;
	margin-bottom: 2px
}

.content-wrapper {
	display: flex;
	min-height: 100%;
	justify-content: center;
	padding: 15px;
    min-width: 1000px;
    background-color: rgb(255, 253, 253);
}

.content-wrapper > div {
    padding: 34px 0 20px 0;
}

.content-wrapper .summary-wrapper {
	background-color: rgb(245, 245, 245);
	flex-shrink: 0;
	width: 260px
}

.content-wrapper .body-wrapper {
	flex-shrink: 0;
	margin-left: 16px;
	margin-bottom: 16px;
    width: 580px;
}

.content-wrapper .body-wrapper .head-title {
	font-size: 18px;
	font-family: Georgia, 'Times New Roman', Times, serif;
	line-height: 2;
	letter-spacing: 1px;
	text-align: center
}

.content-wrapper .body-wrapper .head-title-divider {
	font-weight: 200;
	letter-spacing: 2px;
	line-height: 35px;
	text-align: center
}

@media only screen and (max-width: 1000px) {
	.summary {
		position: static;
		display: flex;
		flex-direction: column;
		height: 95%;
		padding: 0;
		width: 260px
	}

	.content-wrapper {
		min-width: 320px;
		padding: 0;
		display: block
	}

	.content-wrapper>div {
		margin-bottom: 21px
	}

	.content-wrapper .summary-wrapper {
		display: flex;
		justify-content: center;
		width: 100%
	}

	.content-wrapper .body-wrapper {
		flex-shrink: 0;
		margin-left: 0px;
		padding: 0 14px;
		width: 100%
	}
}

